--- a/host_vars/example_host/files.settings
+++ b/host_vars/example_host/files.settings
@@ -3,3 +3,4 @@ tool_list_dir: "{{ inventory_hostname }}/tools/"
 backup_db_dir: "{{ inventory_hostname }}/backup_db"
 insert_db_dir: "{{ inventory_hostname }}/insert_db"
 ssh_dir: "{{playbook_dir}}/files/{{ inventory_hostname }}/ssh"
+welcome_dir: "{{ inventory_hostname }}/welcome/"
