--- a/roles/galaxywelcome/tasks/main.yml
+++ b/roles/galaxywelcome/tasks/main.yml
@@ -1,2 +1,28 @@
 ---
+# Copyright 2017 Sequencing Analysis Support Core - Leiden University Medical Center
+# Contact us at: sasc@lumc.nl
+#
+# This file is part of galaxy-docker-ansible.
+# A dual licensing mode is applied.
+# The source code within this project is freely available for non-commercial use under the GNU Affero General Public license.
+# For commercial users or users who do not want to follow the AGPL, please contact us to obtain a separate license.
+#
+# You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
+
 # tasks file for galaxywelcome
+
+- name: Make sure export folder exists
+  file: 
+    path: "{{docker_export_location}}"
+    state: directory
+
+- name: Copy welcome files using rsync
+  synchronize: 
+    mode: push
+    dest: "{{docker_export_location}}"
+    src: "{{welcome_dir}}"
+    compress: yes
+  vars:
+    ansible_ssh_pipelining: False # Needed for synchronize to work
+
+
