Added ownership of welcome files

--- a/roles/galaxywelcome/defaults/main.yml
+++ b/roles/galaxywelcome/defaults/main.yml
@@ -11,4 +11,4 @@
 
 # defaults file for galaxywelcome
 
-welcome_dir= "{{inventory_hostname}}/welcome/"
+welcome_dir: "{{inventory_hostname}}/welcome/"
