--- a/main.yml
+++ b/main.yml
@@ -25,6 +25,7 @@
     - { role: installdocker, when: "{{ installdocker | default('False')}}" }
     - { role: importdb, when: "{{ importdb | default('False')}}" }    
     - { role: upgrade, when: "{{ upgrade | default('False')}}" }
+    - { role: galaxywelcome, when: "{{ galaxywelcome | default('False')}}" }
     - { role: galaxyfirewall, when: "{{ galaxyfirewall | default('False')}}" }
     - { role: rundockergalaxy, when: "{{ rundockergalaxy | default('False')}}" }
     - { role: cronbackupdb, when: "{{ cronbackupdb | default('False')}}" }
