--- a/roles/installtools/tasks/main.yml
+++ b/roles/installtools/tasks/main.yml
@@ -14,33 +14,57 @@
     name: "{{ bioblend_packages }}"
     state: latest
 
-- name: Create tool list directory on the server
+- name: Create new empty tool list directory on the server
   file:
     path: "{{work_dir}}"
-    state: directory
+    state: "{{item}}"
+  with_items:
+    - absent
+    - directory
 
-- name: Check whether working directory is empty
+- name: Find yml files in tool list directory
   find:
-    paths: "{{work_dir}}"
+    paths: "{{tool_list_dir}}"
     patterns:
-      - "*"
-  register: work_dir_files
+      - "*.yml"
+      - "*.yaml"
+  register: tools
+  delegate_to: 127.0.0.1
+  become: no
 
-- name: show work_dir_files
-  debug:
-    msg: "{{work_dir_files.matched}}"
+- name: Show which yamls will be transferred
+  debug: 
+    var: tools
     verbosity: 1
 
-- name: Fail if directory is not empty
-  fail:
-    msg: "Directory already contains files with .yml or .yaml extension or contains an old shed_install.py. Please remove these files or specify another directory. {{work_dir_files.files}}"
-  when: '"{{work_dir_files.matched}}" > "0"'
+- name: delete api key from tool list files
+  lineinfile:
+    destfile: "{{item.path}}"
+    regexp: "api_key:.*"
+    state: absent
+  with_items: 
+    - "{{tools.files}}"
+  become: no
+  delegate_to: 127.0.0.1
 
-- name: Move tool directory on galaxy server
+- name: delete galaxy_instance from tool list files
+  lineinfile:
+    destfile: "{{item.path}}"
+    regexp: "galaxy_instance:.*"
+    state: absent     
+  with_items: 
+    - "{{tools.files}}"
+  become: no
+  delegate_to: 127.0.0.1
+
+- name: Move tools to galaxy server
   copy:
-    dest: "{{work_dir}}"
-    src: "{{tool_list_dir}}"
+    dest: "{{work_dir}}/{{item.path | basename}}"
+    src: "{{item.path}}"
     force: yes
+    mode: 0600
+  with_items:
+    - "{{tools.files}}"
 
 - name: Create a file list from the directory
   find: 
@@ -49,31 +73,6 @@
       - "*.yml"
       - "*.yaml"
   register: tools
-
-- name: Set list of tool list files as a fact
-  set_fact:
-    tool_list_files: "{{tools|json_query('files[*].path')}}"
-
-- name: delete api key from tool list files
-  lineinfile:
-    destfile: "{{item}}"
-    regexp: "api_key:.*"
-    state: absent
-#    line: "api_key{{':'}} {{galaxy_master_api_key}}"
-  with_items: "{{tool_list_files}}"
-
-- name: Show tool_list_files
-  debug:
-    var: tool_list_files
-    verbosity: 1
-
-- name: delete galaxy_instance from tool list files
-  lineinfile:
-    destfile: "{{item}}"
-    regexp: "galaxy_instance:.*"
-    state: absent     
-#    line: "galaxy_instance{{':'}} 127.0.0.1"
-  with_items: "{{tool_list_files}}"
 
 - name: copy ephemeris tool installer to server
   copy:
@@ -86,8 +85,8 @@
     timeout: 5
 
 - name: Use ephemeris shed install to install tools 
-  command: "python {{work_dir}}/shed_install.py -g localhost:{{galaxy_web_port}} -a {{galaxy_master_api_key}} -t {{item}}"
-  with_items: "{{tool_list_files}}"
+  command: "python {{work_dir}}/shed_install.py -g localhost:{{galaxy_web_port}} -a {{galaxy_master_api_key}} -t {{item.path}}"
+  with_items: "{{tools.files}}"
   ignore_errors: yes
 
 - name: remove added files
