--- a/roles/rundockergalaxy/vars/main.yml
+++ b/roles/rundockergalaxy/vars/main.yml
@@ -10,6 +10,6 @@
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
 docker_published_ports:
-  - "{{galaxy_web_port}}:80"
-  - "{{galaxy_ftp_port}}:8021"
-  - "{{galaxy_sftp_port}}:8022"
+  - "127.0.0.1:{{galaxy_web_port}}:80"
+  - "127.0.0.1:{{galaxy_ftp_port}}:8021"
+  - "127.0.0.1:{{galaxy_sftp_port}}:8022"
