removed galaxyfirewall redundant role

--- a/roles/deletegalaxy/tasks/main.yml
+++ b/roles/deletegalaxy/tasks/main.yml
@@ -37,6 +37,15 @@
     path: "/etc/ufw/applications.d/{{ufw_profile}}"
     state: absent
 
+- debug: 
+    var: nginx_sites
+
+- name: remove nginx profiles
+  file:
+    path: "/etc/nginx/sites-available/{{item.key}}.conf"
+    state: absent
+  with_dict: "{{nginx_sites}}"
+
 - name: remove cron jobs for backup scripts
   cron:
     state: absent
