--- a/main.yml
+++ b/main.yml
@@ -26,6 +26,7 @@
     - { role: importdb, when: "{{ importdb | default('False')}}" }    
     - { role: upgrade, when: "{{ upgrade | default('False')}}" }
     - { role: galaxywelcome, when: "{{ galaxywelcome | default('False')}}" }
+    - { role: ansible-role-nginx, when: "{{ ansible_role_nginx | default('False')}}" }
     - { role: galaxyfirewall, when: "{{ galaxyfirewall | default('False')}}" }
     - { role: rundockergalaxy, when: "{{ rundockergalaxy | default('False')}}" }
     - { role: cronbackupdb, when: "{{ cronbackupdb | default('False')}}" }
