--- a/roles/rundockergalaxy/vars/main.yml
+++ b/roles/rundockergalaxy/vars/main.yml
@@ -11,5 +11,5 @@
 
 docker_published_ports:
   - "127.0.0.1:{{galaxy_web_port}}:80"
-  - "{{galaxy_ftp_port}}:8021"
-  - "{{galaxy_sftp_port}}:8022"
+  - "127.0.0.1:{{galaxy_ftp_port}}:8021"
+  - "127.0.0.1:{{galaxy_sftp_port}}:8022"
