tested and debugged extractdb fix

--- a/roles/extractdb/tasks/main.yml
+++ b/roles/extractdb/tasks/main.yml
@@ -1,3 +1,4 @@
+
 ---
 # Copyright 2017 Sequencing Analysis Support Core - Leiden University Medical Center
 # Contact us at: sasc@lumc.nl
@@ -11,9 +12,16 @@
 
 # tasks file for extractdb
 
-- name: register whether the container is running:
-  command: "docker inspect {{docker_container_name}}"
-  register: docker_inspect
+- name: register whether the container is running
+  command: "docker inspect -f {{inspect}} {{docker_container_name}}"
+  vars:
+    inspect: !unsafe '{{.State.Running}}'
+  register: docker_running
+
+- name: Show docker inspection results
+  debug: 
+    var: docker_running
+    verbosity: 1
 
 - name: Make sure the docker container is started
   docker_container:
@@ -21,8 +29,7 @@
     volumes: "{{docker_export_location}}:/export/"
     image: "{{docker_image}}"
     state: started
-  when: 'not {{item.Status.Running}}'
-  with_items: "{{ docker_inspect }}"
+  when: "not {{docker_running.stdout}}"
 
 - name: Create empty dump file on server
   file:
