--- a/host_vars/example_host/web.settings
+++ b/host_vars/example_host/web.settings
@@ -1,7 +1,9 @@
-# Web urls
-galaxy_web_urls: 
+max_upload_size: "50g"
+
+galaxy_web_urls:
   - example_host.org
-  - www.example_host.org
+  - galaxy.example_host.org
+  - www.example_galaxy.org
 
 # remote listening ports
 public_galaxy_web_port: 80
@@ -11,10 +13,10 @@ galaxy_sftp_port: 8022
 # Local listening ports
 galaxy_web_port: 8080
 
-# File settings
-max_upload_size: "50g"
 
 # NGINX settings
+# These settings depend on above settings and should not be changed
+# unless you are familiar with ansible-nginx-role configuration
 nginx_sites:
   galaxy:
     - "listen {{ public_galaxy_web_port }}"
@@ -24,8 +26,14 @@ nginx_sites:
 
 nginx_configs:
   upstream:
-    - "upstream galaxy { server 127.0.0.1:{{galaxy_web_port}}; }"
-
+    - "upstream galaxy { server localhost:{{galaxy_web_port}}; }"
+  proxy:
+    - "proxy_set_header X-Real-IP $remote_addr"
+    - "proxy_set_header X-Forwarded-Host $host"
+    - "proxy_set_header X-Forwarded-Server $host"
+    - "proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for"
+    - "proxy_set_header Host $http_host"
+    
 nginx_http_params:
 #  - "include       mime.types"
 #  - "default_type  application/octet-stream"
