remove yaml templating from when statement in handlers of rundockergalaxy role

--- a/roles/rundockergalaxy/handlers/main.yml
+++ b/roles/rundockergalaxy/handlers/main.yml
@@ -14,6 +14,6 @@
     url: "http://localhost:{{galaxy_web_port}}"
     return_content: yes
   register: result
-  until: '"{{galaxy_brand}}" in result.content'
+  until: 'galaxy_brand in result.content'  
   retries: 20 
   delay: 10
