--- a/roles/addldap/tasks/main.yml
+++ b/roles/addldap/tasks/main.yml
@@ -4,6 +4,7 @@
 - name: Show ldap variables
   debug:
     var: ldap
+    verbosity: 1
 
 - name: register whether the config folder is already present
   stat:
@@ -13,6 +14,7 @@
 - name: Show config folder presence
   debug:
     var: config_folder
+    verbosity: 1
  
 
 - name: create default galaxy folders
@@ -22,12 +24,18 @@
     name: "{{docker_container_name}}"
     state: started
     command: "python /usr/local/bin/export_user_files.py $PG_DATA_DIR_DEFAULT"
-  when: not True # {{galaxy_config_folder_present}} 
 
+- name: register whether the config folder is already present
+  stat:
+    path: "{{docker_export_location}}/galaxy-central/config"
+  register: default_config_folder
+  when: not config_folder.stat.exists 
+  until: default_config_folder.stat.exists
+  retries: 10
+  delay: 5
 
 - name: Create auth_conf.xml file in config folder
-  template: 
+  template:
     dest: "{{docker_export_location}}/galaxy-central/config/auth_conf.xml"
     force: yes
     src: auth_conf.xml.j2
-    trim_blocks: True #Ansible 2.3 required
