--- a/host_vars/example_host/galaxy.settings
+++ b/host_vars/example_host/galaxy.settings
@@ -1,7 +1,11 @@
 #Required settings
-galaxy_admin_user: "example@example.nl"
-galaxy_master_api_key: "8374uhiuy893749872302" #replace with your own key!!
-galaxy_brand: "Instance of Galaxy"
+# Please uncomment and specify these values yourself
+
+# galaxy_admin_user: "example@example.nl"
+# galaxy_master_api_key: "8374uhiuy893749872302" #replace with your own key!!
+# galaxy_brand: "Instance of Galaxy"
+# galaxy_report_user: admin
+# galaxy_report_password: admin
 
 #optional settings
 optional_environment_settings:
