--- a/roles/rundockergalaxy/tasks/main.yml
+++ b/roles/rundockergalaxy/tasks/main.yml
@@ -23,13 +23,37 @@
     owner: "{{docker_user}}"
     mode: 0600
 
+- name: Set docker published web port
+  set_fact:
+    docker_published_web_port: "127.0.0.1:{{galaxy_web_port}}:80"
+  when:
+    - galaxy_web_port is defined
+    - galaxy_web_port != ''
+
+- name: set docker published ftp port
+  set_fact:
+    docker_published_ftp_port: "127.0.0.1:{{galaxy_ftp_port}}:8021"
+  when:
+    - galaxy_ftp_port is defined
+    - galaxy_ftp_port != ''
+
+- name: set docker published sftp port
+  set_fact:
+    docker_published_sftp_port: "127.0.0.1:{{galaxy_sftp_port}}:8021"
+  when:
+    - galaxy_sftp_port is defined
+    - galaxy_sftp_port != ''
+
 - name: Restart the docker container
   docker_container:
     env_file: "{{docker_environment_file_location}}"
     volumes: "{{docker_export_location}}:/export/"
     image: "{{docker_image}}"
     name: "{{docker_container_name}}"
-    published_ports: "{{docker_published_ports}}"
+    published_ports:
+      - "{{docker_published_web_port | default(omit)}}"
+      - "{{docker_published_ftp_port | default(omit)}}"
+      - "{{docker_published_sftp_port| default(omit)}}"
     state: started
     restart: yes
   become_user: "{{docker_user}}"
