--- a/roles/rundockergalaxy/tasks/main.yml
+++ b/roles/rundockergalaxy/tasks/main.yml
@@ -44,16 +44,28 @@
     - galaxy_sftp_port is defined
     - galaxy_sftp_port != ''
 
+- name: Create list of docker published ports
+  set_fact:
+    docker_published_ports: "{{docker_published_ports + item}}"
+  with_items:
+    - "{{docker_published_web_port | default('[]')}}"
+    - "{{docker_published_ftp_port | default('[]')}}"
+    - "{{docker_published_sftp_port | default('[]')}}"
+
+- name: Omit port publication if no ports are defined
+  set_fact:
+    docker_published_ports: "{{docker_published_ports == '[]' |ternary(omit,docker_published_ports}}}"
+
+- debug:
+    var: docker_published_ports
+
 - name: Restart the docker container
   docker_container:
     env_file: "{{docker_environment_file_location}}"
     volumes: "{{docker_export_location}}:/export/"
     image: "{{docker_image}}"
     name: "{{docker_container_name}}"
-    published_ports:
-      - "{{docker_published_web_port | default(omit)}}"
-      - "{{docker_published_ftp_port | default(omit)}}"
-      - "{{docker_published_sftp_port| default(omit)}}"
+    published_ports: "{{docker_published_ports}}"
     state: started
     restart: yes
   become_user: "{{docker_user}}"
