ports are now optional

--- a/roles/rundockergalaxy/defaults/main.yml
+++ b/roles/rundockergalaxy/defaults/main.yml
@@ -16,6 +16,7 @@ docker_image: bgruening/galaxy-stable
 docker_environment_file_location: "/home/{{docker_user}}/galaxydocker.env"
 docker_export_location: "/home/{{docker_user}}/"
 docker_container_name: galaxy
+galaxy_web_port: 8080
 
 #Galaxy defaults
 sge_root: ""
