--- a/roles/rundockergalaxy/tasks/main.yml
+++ b/roles/rundockergalaxy/tasks/main.yml
@@ -25,32 +25,43 @@
 
 - name: Set docker published web port
   set_fact:
-    docker_published_web_port: "127.0.0.1:{{galaxy_web_port}}:80"
+    docker_published_web_port: 
+      - "127.0.0.1:{{galaxy_web_port}}:80"
   when:
     - galaxy_web_port is defined
     - galaxy_web_port != ''
 
 - name: set docker published ftp port
   set_fact:
-    docker_published_ftp_port: "127.0.0.1:{{galaxy_ftp_port}}:8021"
+    docker_published_ftp_port: 
+      - "127.0.0.1:{{galaxy_ftp_port}}:8021"
   when:
     - galaxy_ftp_port is defined
     - galaxy_ftp_port != ''
 
 - name: set docker published sftp port
   set_fact:
-    docker_published_sftp_port: "127.0.0.1:{{galaxy_sftp_port}}:8021"
+    docker_published_sftp_port: 
+      - "127.0.0.1:{{galaxy_sftp_port}}:8021"
   when:
     - galaxy_sftp_port is defined
     - galaxy_sftp_port != ''
+
+- name: show published ports
+  debug:
+    var: "{{ item }}"
+  with_items:
+    - docker_published_web_port
+    - docker_published_ftp_port
+    - docker_published_sftp_port
 
 - name: Create list of docker published ports
   set_fact:
     docker_published_ports: "{{docker_published_ports + item}}"
   with_items:
-    - "{{docker_published_web_port | default('[]')}}"
-    - "{{docker_published_ftp_port | default('[]')}}"
-    - "{{docker_published_sftp_port | default('[]')}}"
+    - "{{ docker_published_web_port | default('[]')}}"
+    - "{{ docker_published_ftp_port | default('[]')}}"
+    - "{{ docker_published_sftp_port | default('[]')}}"
 
 - name: Show docker published ports
   debug:
