--- a/roles/rundockergalaxy/tasks/main.yml
+++ b/roles/rundockergalaxy/tasks/main.yml
@@ -1,3 +1,4 @@
+
 ---
 # Copyright 2017 Sequencing Analysis Support Core - Leiden University Medical Center
 # Contact us at: sasc@lumc.nl
@@ -25,24 +26,21 @@
 
 - name: Set docker published web port
   set_fact:
-    docker_published_web_port: 
-      - "127.0.0.1:{{galaxy_web_port}}:80"
+    docker_published_web_port: "127.0.0.1:{{galaxy_web_port}}:80"
   when:
     - galaxy_web_port is defined
     - galaxy_web_port != ''
 
 - name: set docker published ftp port
   set_fact:
-    docker_published_ftp_port: 
-      - "127.0.0.1:{{galaxy_ftp_port}}:8021"
+    docker_published_ftp_port: " 127.0.0.1:{{galaxy_ftp_port}}:8021"
   when:
     - galaxy_ftp_port is defined
     - galaxy_ftp_port != ''
 
 - name: set docker published sftp port
   set_fact:
-    docker_published_sftp_port: 
-      - "127.0.0.1:{{galaxy_sftp_port}}:8021"
+    docker_published_sftp_port: " 127.0.0.1:{{galaxy_sftp_port}}:8022"
   when:
     - galaxy_sftp_port is defined
     - galaxy_sftp_port != ''
@@ -50,23 +48,24 @@
 - name: show published ports
   debug:
     var: "{{ item }}"
+    verbosity: 1
   with_items:
     - docker_published_web_port
     - docker_published_ftp_port
     - docker_published_sftp_port
 
-- name: Create list of docker published ports
+- name: Set docker published ports
   set_fact:
     docker_published_ports: "{{docker_published_ports + item}}"
   with_items:
-    - "{{ docker_published_web_port | default('[]')}}"
-    - "{{ docker_published_ftp_port | default('[]')}}"
-    - "{{ docker_published_sftp_port | default('[]')}}"
+    - "{{ docker_published_web_port | default('')}}"
+    - "{{ docker_published_ftp_port | default('')}}"
+    - "{{ docker_published_sftp_port | default('')}}"
 
 - name: Show docker published ports
   debug:
-    var: docker_published_ports
-    verbosity: 0
+    var: docker_published_ports.split()
+    verbosity: 1
 
 - name: Restart the docker container
   docker_container:
@@ -74,7 +73,7 @@
     volumes: "{{docker_export_location}}:/export/"
     image: "{{docker_image}}"
     name: "{{docker_container_name}}"
-    published_ports: "{{docker_published_ports}}"
+    published_ports: "{{docker_published_ports.split(' ')}}"
     state: started
     restart: yes
   become_user: "{{docker_user}}"
