disabled proftp in example_host

--- a/host_vars/example_host/galaxy.settings
+++ b/host_vars/example_host/galaxy.settings
@@ -8,5 +8,6 @@ optional_environment_settings:
   GALAXY_CONFIG_CONDA_AUTO_INSTALL: True
   GALAXY_CONFIG_CONDA_AUTO_INIT: True
   GALAXY_CONFIG_USE_CACHED_DEPENDENCY_MANAGER: True
+  NONUSE=proftp
 #  GALAXY_CONFIG_AUTH_CONFIG_FILE: "config/auth_conf.xml"
 
