--- a/roles/addldap/defaults/main.yml
+++ b/roles/addldap/defaults/main.yml
@@ -2,8 +2,10 @@
 # defaults file for addldap
 
 ldap_defaults:
-  login_use_username: "False"
-  allow_password_change: "False"
-  allow_register: "True"
-  auto_register: "True"
-  continue_on_failure: "False"  
+  login_use_username: False
+  allow_password_change: False
+  allow_register: False
+  auto_register: True
+  continue_on_failure: False
+  email_suffix: ""
+#  options: ""
