--- a/roles/addldap/tasks/main.yml
+++ b/roles/addldap/tasks/main.yml
@@ -11,7 +11,6 @@
   vars:
     inspect: !unsafe '{{.State.Running}}'
   register: docker_running
-  ignore_errors: True
 
 - name: Show docker inspection results
   debug:
@@ -21,13 +20,16 @@
 - name: Make sure the docker container is started
   docker_container:
     name: "{{docker_container_name}}"
-    volumes: "{{docker_export_location}}:/export/"
-    image: "{{docker_image}}"
     state: started
   when: not docker_running.stdout | bool
 
+- name: Create auth_conf.xml file in config folder
+  template:
+    dest: "{{docker_export_location}}/galaxy-central/config/auth_conf.xml"
+    force: yes
+    src: auth_conf.xml.j2
 
-- name:  Create script to include python-ldap
+- name:  Create script to include python-ldap and restart the container
   template: 
     dest: "{{docker_export_location}}/install_python_ldap.sh"
     mode: 700
@@ -44,17 +46,4 @@
   debug:
     var: ldap_python_install.stdout
 
-- name: register whether the config folder is already present
-  stat:
-    path: "{{docker_export_location}}/galaxy-central/config"
-  register: default_config_folder
-  until: default_config_folder.stat.exists
-  retries: 10
-  delay: 3
-  
-- name: Create auth_conf.xml file in config folder
-  template:
-    dest: "{{docker_export_location}}/galaxy-central/config/auth_conf.xml"
-    force: yes
-    src: auth_conf.xml.j2
 
