--- a/roles/installtools/tasks/main.yml
+++ b/roles/installtools/tasks/main.yml
@@ -9,6 +9,8 @@
 #
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
+- meta: flush_handlers
+
 - name: Install required bioblend package
   pip:
     name: "{{ bioblend_packages }}"
