Changed ldap.settings example

--- a/host_vars/example_host/ldap.settings
+++ b/host_vars/example_host/ldap.settings
@@ -1,7 +1,5 @@
 ldap_settings:
-  server: "dc1.example.com"
-  options: ""
-  email_suffix: "@example.com"
+  server: "ldap://dc1.example.com"
   search_base: "dc=dc1,dc=example,dc=com"
-  search_user: "cn=jsmith,ou=People,dc=domain,dc=com"
-  search_password: "secret"
+  search_user: "ldapsearch"
+  search_password: "beyondsecretwithmanycharacters"
