--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,27 @@
 ---
-# tasks file for .
+# Copyright 2017 Sequencing Analysis Support Core - Leiden University Medical Center
+# Contact us at: sasc@lumc.nl
+#
+# This file is part of galaxy-docker-ansible.
+# A dual licensing mode is applied.
+# The source code within this project is freely available for non-commercial use under the GNU Affero General Public license.
+# For commercial users or users who do not want to follow the AGPL, please contact us to obtain a separate license.
+#
+# You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
+
+- name: 
+  vars: # These are defaults. Overwritten by extra_vars and include_vars. See: http://docs.ansible.com/ansible/playbooks_variables.html#variable-precedence-where-should-i-put-a-variable
+    installdocker: False
+    importdb: False
+    upgrade: False
+    galaxywelcome: False
+    addldap: False
+    nginxsettings: False
+    ansible_role_nginx: False
+    galaxyfirewall: False
+    rundockergalaxy: False
+    cronbackupdb: False
+    installtools: False
+    extractdb: False
+    deletegalaxy: False
+
