--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,2 +1,29 @@
 ---
-# vars file for .
+# Copyright 2017 Sequencing Analysis Support Core - Leiden University Medical Center
+# Contact us at: sasc@lumc.nl
+#
+# This file is part of galaxy-docker-ansible.
+# A dual licensing mode is applied.
+# The source code within this project is freely available for non-commercial use under the GNU Affero General Public license.
+# For commercial users or users who do not want to follow the AGPL, please contact us to obtain a separate license.
+#
+# You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
+
+# vars file for galaxy-docker
+
+# vars for addldap
+ldap: "{{ ldap_defaults | combine(ldap_settings) }}"
+
+# vars for cronbackupdb
+zip_command: "pigz -{{compression_level}} -p {{compression_threads}}"
+backup_galaxy_rsync_settings: "{{ default_rsync_settings | combine(backup_rsync_settings)  }}"
+
+# cars for installdocker
+- include: ubuntu.yml
+
+# vars for installtools:
+bioblend_packages:
+  - bioblend
+
+# vars for rundockergalaxy
+docker_published_ports: ""
