--- a/vars/main.yml
+++ b/vars/main.yml
@@ -37,8 +37,8 @@ packages:
   - docker-engine
 
 # vars for installtools:
-bioblend_packages:
-  - bioblend
+ephemeris_packages:
+  - ephemeris
 
 # vars for rundockergalaxy
 docker_published_ports: ""
